tests/snapshots/integration__integration_tests__help__help_merge_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - merge
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt merge - Merge worktree into target branch
Usage: [1m[36mwt merge[0m [36m[OPTIONS][0m [36m[TARGET][0m

[1m[32mArguments:[0m
  [36m[TARGET][0m  Target branch

[1m[32mOptions:[0m
      [1m[36m--no-squash[0m      Skip commit squashing
      [1m[36m--no-commit[0m      Skip commit, squash, and rebase
      [1m[36m--no-remove[0m      Keep worktree after merge
      [1m[36m--no-verify[0m      Skip all project hooks
  [1m[36m-f[0m, [1m[36m--force[0m          Skip approval prompts
      [1m[36m--stage[0m[36m [0m[36m<STAGE>[0m  What to stage before committing [default: all] [possible values: all, tracked, none]
  [1m[36m-h[0m, [1m[36m--help[0m           Print help (see more with '--help')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m        Show commands and debug info
