tests/snapshots/integration__integration_tests__help__help_remove.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt remove - Remove worktree and branch
Usage: wt remove [OPTIONS] [WORKTREES]...

Options:
  --no-delete-branch           
      Keep branch after removal

  -D, --force-delete
      Delete unmerged branches

  --no-background              
      Run removal in foreground

  -C <path>
      Change working directory

  --config <path>          
      User config file path

  -v, --verbose
      Show commands and debug info

  -h, --help
      Print help (see a summary with '-h')

[38;5;10mOPERATION[39m

Removes worktree directory, git metadata, and branch. Requires clean working 
tree.

No arguments (remove current):
- Removes current worktree and switches to main worktree
- In main worktree: switches to default branch

By name (remove specific):
- Removes specified worktree(s) and branches
- Current worktree removed last (switches to main first)

Background removal (default):
- Returns immediately so you can continue working
- Logs: .git/wt-logs/{branch}-remove.log
- Use --no-background for foreground (blocking)

[38;5;10mEXAMPLES[39m

Remove current worktree and branch:
wt remove

Remove specific worktree and branch:
wt remove feature-branch

Remove worktree but keep branch:
wt remove --no-delete-branch feature-branch

Remove multiple worktrees:
wt remove old-feature another-branch

Remove in foreground (blocking):
wt remove --no-background feature-branch

Switch to default in main:
wt remove  # (when already in main worktree)

----- stderr -----
