tests/snapshots/integration__integration_tests__help__help_remove_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - remove
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt remove - Remove worktree and branch
Usage: [1m[36mwt remove[0m [36m[OPTIONS][0m [36m[WORKTREES]...[0m

[1m[32mArguments:[0m
  [36m[WORKTREES]...[0m  Worktree or branch (@ for current)

[1m[32mOptions:[0m
      [1m[36m--no-delete-branch[0m  Keep branch after removal
  [1m[36m-D[0m, [1m[36m--force-delete[0m      Delete unmerged branches
      [1m[36m--no-background[0m     Run removal in foreground
  [1m[36m-h[0m, [1m[36m--help[0m              Print help (see more with '--help')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m            Working directory for this command
      [1m[36m--config[0m[36m [0m[36m<path>[0m  User config file path
  [1m[36m-v[0m, [1m[36m--verbose[0m        Show commands and debug info
