tests/snapshots/integration__integration_tests__help__help_root.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt - Git worktree management
Usage: wt [OPTIONS] <COMMAND>

Commands:
  config  Manage configuration and shell integration
  step    Primitive operations (building blocks for workflows)
  list    List worktrees and optionally branches
  switch  Switch to a worktree
  remove  Remove worktree and branch
  merge   Merge worktree into target branch

Options:
  -h, --help
      Print help (see a summary with '-h')

  -V, --version
      Print version

Global Options:
  -C <path>
      Change working directory

  --config <path>          
      User config file path

  -v, --verbose
      Show commands and debug info

-C <path>: Run as if started in <path> instead of current directory.

--config <path>: Override user config file location. Without this flag,
config is loaded from (in order of precedence):
1. WORKTRUNK_CONFIG_PATH environment variable
2. ~/.config/worktrunk/config.toml (Linux/macOS) or 
%APPDATA%\worktrunk\config.toml (Windows)

----- stderr -----
